# pdv

./: .gitignore  GUIA_RAPIDO.md  README.md  README_INSTALADORES.md  RESUMO_TAREFAS.md  app.json  criar-instaladores.ps1  garcom.html  garcom.js  index.html  package-lock.json  package.json  script.js  style.css
.github/: copilot-instructions.md
apps/desktop/: package.json  tsconfig.json
apps/desktop/src/: App.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/mobile/: App.tsx  app.json  package.json  tsconfig.json
backend/: package-lock.json  package.json
backend/prisma/: dev.db  schema.prisma  seed.ts
backend/prisma/migrations/20251229105016_init/: migration.sql
backend/src/: app.module.ts  main.ts
backend/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts  jwt.guard.ts
backend/src/catalog/: catalog.controller.ts  catalog.module.ts  catalog.service.ts
backend/src/fiscal/: fiscal.controller.ts  fiscal.module.ts  fiscal.service.ts
backend/src/fiscal/dto/: create-nfce.dto.ts
backend/src/fiscal/entities/: nfce.entity.ts
backend/src/pagamentos/: pagamentos.controller.ts  pagamentos.module.ts  pagamentos.service.ts
backend/src/pagamentos/dto/: create-pagamento.dto.ts
backend/src/pagamentos/entities/: pagamento.entity.ts
backend/src/vendas/: vendas.controller.ts  vendas.service.ts
backend/src/vendas/dto/: create-venda.dto.ts  update-venda.dto.ts
backend/src/vendas/entities/: venda.entity.ts
docs/: INSTALLATION.md  MVP_BACKLOG.md
frontend/: package.json
frontend/pages/: index.tsx
